fix overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,7 @@
 
 body {
 	user-select: none;
+	overflow: hidden;
 }
 
 body,
